# LearnOpenCL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ImgProc.h  main.cpp  readme.txt
app/: android.bat  android_build.sh  run.sh
cmake/: libacv_oclcore-config.cmake  libmobilecv-config.cmake  libmpbase-config.cmake  libopencv-config.cmake  libyuv-config.cmake
data/: 011_1280x720.gray  011_640x360_res.gray
include/: PyramidNLM_OCL_Handle.h  arcsoft_example.h
include/android/: program_binary.bin.h
include/windows/: program_binary.bin.h
src/: CMakeLists.txt  ImgProc.cpp  Interface.cpp  MTBasicTimer.h  OCLInitializerInExample.h  clog.c  clog.h  main.cpp  single_image_enhancement_define.h
src/CL/: cl.h  cl_dx9_media_sharing.h  cl_ext.h  cl_ext_qcom.h  cl_platform.h
src/CLWrapper/include/: CLBuffer.h  CLContext.h  CLEvent.h  CLImage.h  CLKernel.h  CLLog.h  CLProgram.h  CLScript.h  CLUtility.h
src/SimpleResize/: SampleResize.cl  SampleResizeOCL.h
src/common/: ArcsoftLog.h  Arcsoft_Copy_To_FilledImage.h  Arcsoft_Copy_To_FilledImage.inl.h  Arcsoft_Define_For_SingleImage.h  BasicTimer.h  single_image_enhancement_define.h
src/guidedFilter/: arcsoft_guided_filter.cpp  arcsoft_guided_filter.h  guide_filter_c1.cpp  guided_filter.cpp  guided_filter.h  guided_filter_common.h  guided_filter_imgproc.cpp  guided_filter_imgproc.h  guided_filter_imgproc_c1.cpp
src/nlmOCL/: BasicTimer.h  PyramidNLM.cl  PyramidNLM_OCL.cpp  PyramidNLM_OCL.h  PyramidNLM_OCL_Handle.cpp  PyramidNLM_OCL_Handle.h  PyramidNLM_OCL_init.h  PyramidNLM_ocl.cpp  PyramidNLM_ocl.h  pyramidNLM_ocl.cpp  pyramidNLM_ocl.h
src/opencl/: oclDemo.cl
src/pyramidNLM/: NEONvsSSE.h  arcsoft_guided_filter.cpp  defcompilesetting.h  imagebase.cpp  imagebase.h  img_block_nlm.cpp  imgpyramid.h  imgpyramid_base.cpp  imgpyramid_block_nlm.cpp  imgpyramid_block_nlm.h  imgpyramid_creat.cpp  imgpyramid_downscale.cpp  imgpyramid_expand.cpp  imgpyramid_process.h  nlmblock.h
test/: CMakeLists.txt  dump_binary.cpp  sample.cpp  test_android.cpp
